--- a/remove_exp_quotations/views/sale_order_views_inherit.xml
+++ b/remove_exp_quotations/views/sale_order_views_inherit.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data noupdate="1">
-        <record model="ir.ui.view" id="view_order_form_inherit_remove_exp_quotations">
-            <field name="name">sale.order.form.inherit.remove_exp_quotations</field>
+    <data>
+        <record model="ir.ui.view" id="view_order_form">
+            <field name="name">sale.order.form.inherit.remove.exp.quotations</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref='sale.view_order_form'/>
             <field name="arch" type="xml">
