--- a/pw_shoes/views/product_template_views_inherith.xml
+++ b/pw_shoes/views/product_template_views_inherith.xml
@@ -10,10 +10,8 @@
                 <xpath expr="//field[@name='invoice_policy']" position="after">
                     <field name="pair_per_case" />
                     <field name="price_per_pair" />
+                    <field name="state" invisible="1"/>
                 </xpath>
-                <field name="list_price" position="attributes">
-                    <attribute name="attrs">{'readonly': [('pair_per_case', '!=', 0.0), ('price_per_pair', '!=', 0.0)]}</attribute>
-                </field>
             </field>
         </record>
     </data>
