--- a/luxer/views/subscription_view_inherit.xml
+++ b/luxer/views/subscription_view_inherit.xml
@@ -1,15 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
-  <data>
-    <record id='view_form_inherit_subscription' model='ir.ui.view'>
-      <field name='name'>sale.subscription.inherit</field>
-      <field name='model'>sale.subscription</field>
-      <field name='inherit_id' ref='sale_subscription.sale_subscription_view_form'/>
-      <field name='arch' type='xml'>
-        <xpath expr='//field[@name="partner_id"]' position='after'>
-          <field name='property_partner'/>
-        </xpath>
+  <record id='sale_subscription_view_form' model='ir.ui.view'>
+    <field name='name'>sale.subscription.inherit.luxer</field>
+    <field name='model'>sale.subscription</field>
+    <field name='inherit_id' ref='sale_subscription.sale_subscription_view_form'/>
+    <field name='arch' type='xml'>
+      <field name='partner_id' position='after'>
+        <field name='property_partner'/>
       </field>
-    </record>
-  </data>
+    </field>
+  </record>
 </odoo>
