--- a/luxer/views/sale_order_inherit.xml
+++ b/luxer/views/sale_order_inherit.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="view_form_inherit_order" model="ir.ui.view">
-            <field name="name">sale.order.inherit</field>
+        <record id="sale.view_order_form" model="ir.ui.view">
+            <field name="name">sale.order.inherit.luxer</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
