--- a/pw-shoes/views/product_form_view_inherit.xml
+++ b/pw-shoes/views/product_form_view_inherit.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
   <data>
-    <record id='product_template_product_form' model='ir.ui.view'>
-      <field name='name'>product.template.product.form</field>
+    <record id='product_template_form_view' model='ir.ui.view'>
+      <field name='name'>product.template.form.view.inherit.pw.shoes</field>
       <field name='model'>product.template</field>
       <field name='inherit_id' ref='product.product_template_form_view'/>
       <field name='arch' type='xml'>
