[IMP] Changed logic to fron-end
Erased an unnecessary attribute and changed the logic to be in the view instead of the model.

--- a/auto_calculate_price/views/product_template_views_inherit.xml
+++ b/auto_calculate_price/views/product_template_views_inherit.xml
@@ -9,7 +9,16 @@
                 <field name="categ_id" position="before">
                     <field name="pair_per_case" />
                     <field name="price_per_pair" /> 
-                    <field name="state" invisible="1"/> 
+                </field>
+                <field name='list_price' position='attributes'>
+                    <attribute name="attrs">
+                        { 
+                        'readonly': [
+                            ('pair_per_case', '!=', 0),
+                            ('price_per_pair', '!=', 0)
+                        ]
+                        }
+                    </attribute>
                 </field>
             </field>
         </record>
