Fixed code based on review comments

--- a/luxer_property_partner_details_in_invoice/views/subscription_view_inherit.xml
+++ b/luxer_property_partner_details_in_invoice/views/subscription_view_inherit.xml
@@ -8,7 +8,7 @@
             <field name='inherit_id' ref='sale_subscription.sale_subscription_view_form' />
             <field name='arch' type='xml'>
                  <xpath expr="//field[@name='partner_id']" position='after'>
-                    <field name='property_partner' />
+                    <field name='property_partner_id' />
                 </xpath>
             </field>
         </record>
