--- a/pw_shoes/views/product_views_inherit.xml
+++ b/pw_shoes/views/product_views_inherit.xml
@@ -25,11 +25,20 @@
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
 
             <field name="arch" type="xml">
-                <field name="list_price" position="after">
+            
+                <xpath expr="//field[@name='list_price']" position="attributes">
+                    {'readonly' : "['|', ('pair_per_case','!=','0'),('price_per_pair','!=',0)]"}
+                </xpath>
+            
+
+
+                <xpath expr="//div[@name='pricing']" position="after">
                     <field name="pair_per_case"/>
                     <field name="price_per_pair"/>
-                </field>
+                    <!--<field name="list_price" attrs="{'readonly' : ['|', ('pair_per_case','!=','0'),('price_per_pair','!=',0)]}"/>-->
+                </xpath>
             </field>
+
         </record>
     </data>
 </odoo>
