--- a/nypw_shoes/views/product_template_views.xml
+++ b/nypw_shoes/views/product_template_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
+    <data noupdate="1">
         <record model="ir.ui.view" id="product_template_only_form_view_inherit_shoes">
             <field name="name">product.template.product.form.inherit.shoes</field>
             <field name="model">product.template</field>
@@ -9,7 +9,9 @@
                 <xpath expr="//field[@name='invoice_policy']" position="after">
                     <field name="pair_p_case" />
                     <field name="price_p_pair" />
-                    <field name="state" invisible="1" />
+                </xpath>
+                <xpath expr="//field[@name='list_price']" position="attributes">
+                    <attribute name="attrs">{'readonly': [('pair_p_case','>','0'),('price_p_pair','>','0')]}</attribute>
                 </xpath>
             </field>
         </record>
