--- a/views/tvu_quotation_cron_view.xml
+++ b/views/tvu_quotation_cron_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding='UTF-8'?>
 <odoo>
     <data noupdate="1">
-        <record id="test_cron" model="ir.cron">
+        <record id="autocancel_cron_job_tvu" model="ir.cron">
         <field name="name">TVU Quotation Sanity Cron JOB</field>
-        <field name="model_id" ref="model_sale_order"/>
+        <field name="model_id" ref="sale.model_sale_order"/>
         <field name="state">code</field>
         <field name="code">model.cancel_expired_quotations()</field>
         <field name="nextcall" eval="(DateTime.now() + timedelta(days=0)).strftime('%Y-%m-%d 04:00:00')" />
