--- a/pw_shoes/views/product_views_inherit.xml
+++ b/pw_shoes/views/product_views_inherit.xml
@@ -3,18 +3,23 @@
 
 <odoo>
     <data>
-        <record model="ir.ui.view" id="account_product_template_view_tree_inherit_pw_shoes">
-            <field name="name">account.product.template.view.tree.pw.shoes</field>
-            <field name="model">product.template</field>
 
-            <field name="inherit_id" ref="account.product_template_view_tree"/>
+        <record model="ir.ui.view" id="product_product_template_kanban_view_inherit_pw_shoes">
+            <field name="name">product.product.template.kanban.view.inherit.pw.shoes</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_kanban_view"/>
 
             <field name="arch" type="xml">
-                <field name="list_price" position="before">
-                    <field name="pair_per_case"/>
-                    <field name="price_per_pair"/>
-                </field>
+                <xpath expr="//div[@name='product_lst_price']" position="after">
+                    <div class="mt-1">
+                        Pairs per case: <field name="pair_per_case"/>
+                    </div>
+                    <div class="mt-1">
+                        Price per pair: <field name="price_per_pair"/>
+                    </div>
+                </xpath>
             </field>
+
         </record>
 
 
@@ -36,8 +41,7 @@
                 <xpath expr="//div[@name='pricing']" position="after">
                     <field name="pair_per_case"/>
                     <field name="price_per_pair"/>
-                    <!--<field name="list_price" attrs="{'readonly' : ['|', ('pair_per_case','!=','0'),('price_per_pair','!=',0)]}"/>-->
-                </xpath>
+                    </xpath>
             </field>
 
         </record>
