--- a/ny_pw_shoes/views/product_views.xml
+++ b/ny_pw_shoes/views/product_views.xml
@@ -9,8 +9,7 @@
                 <field name="barcode" position="after">
                     <field name="pair_per_case">Pair per case</field>
                     <field name="price_per_pair">Price per pair</field>
-                    <field name="fields_empty" invisible="1"/>
-                    <field name="sales_price" force_save="1" attrs="{'readonly':[('fields_empty','=', False)]}">Sales price</field>
+                    <field name="sales_price" force_save="1" attrs="{'readonly':['&amp;', ('pair_per_case', '>', '0'), ('price_per_pair', '>', '0.00')]}">Sales price</field>
                 </field>
             </field>
         </record>
