[IMP] added the many2one and one2one fields to the view, improved the product list view, added to the res.partner view to be able to view and select a product list to apply to that customer

--- a/greenville/views/product_list_view.xml
+++ b/greenville/views/product_list_view.xml
@@ -7,10 +7,18 @@
             <field name="name">product.list.view.form</field>
             <field name="model">product.list</field>
             <field name="arch" type="xml">
-                <form string="Product List Form">
-                    <field name="name"/>
-                    <field name="product_ids"/>
-                    <field name="customer_ids"/>
+                <form>
+                    <sheet>
+                        <h1><field name="name"/></h1>
+                        <notebook>
+                            <page string="Product List">
+                                <field name="product_ids"/>
+                            </page>
+                            <page string="Customers that use this list">
+                                <field name="customer_ids"/>
+                            </page>
+                        </notebook>
+                    </sheet>
                 </form>
             </field>
         </record>
