--- a/greeneville_product_list/views/product_list_views.xml
+++ b/greeneville_product_list/views/product_list_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
-        <record model="ir.ui.view" id="product_list_view_form">
+        <record model="ir.ui.view" id="greenville_product_list_view_form">
             <field name="name">product.list.form</field>
             <field name="model">product.list</field>
             <field name="arch" type="xml">
