addressed review comments except for the shop method overriding

--- a/greenville_custom_product_list/views/res_partner_view.xml
+++ b/greenville_custom_product_list/views/res_partner_view.xml
@@ -9,7 +9,7 @@
                  <xpath expr="//page[1]" position="after">
                     <page name='ecommerce' string = 'Ecommerce' >
                         <group name="product_list" string="Product List">
-                            <field name="product_id"/>
+                            <field name="product_list_name_id"/>
                         </group>
                         
                     </page>
