--- a/greenville_custom_product_list/views/sales_order.xml
+++ b/greenville_custom_product_list/views/sales_order.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-        <data noupdate="1">
+        <data>
                 <record id="product_list_action" model="ir.actions.act_window">
                         <field name="name">Product Lists</field>
                         <field name="res_model">product.list</field>
