--- a/greenville/views/base_view_partner_form_inherit.xml
+++ b/greenville/views/base_view_partner_form_inherit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 	base.view_partner_form -->
+<!-- adds a product list field to the res.partner view -->
 
 <odoo>
     <data>
@@ -9,9 +9,15 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
 
             <field name="arch" type="xml">
-                <field name="property_payment_term_id" position="after">
-                    <field name="product_list_ids"/>
-                </field>
+                <!--<field name="property_payment_term_id" position="after">-->
+                <xpath expr="//notebook" position="inside">
+                    <page name="ecommerce" string="eCommerce">
+                        <group>
+                            <field name="product_list_id" string="Product List"/>
+                        </group>
+                    </page>
+                </xpath>
+                <!--</field>-->
             </field>
         </record>
     </data>
