--- a/greenville_sale_product_list/views/product_list_view.xml
+++ b/greenville_sale_product_list/views/product_list_view.xml
@@ -10,10 +10,10 @@
                         <h1><field name="name"/></h1>
                         <notebook>
                             <page string="Product List">
-                                <field name="product_ids"/>
+                                <field name="product_id"/>
                             </page>
                             <page string="Customers That Use This List">
-                                <field name="customer_ids"/>
+                                <field name="customer_id"/>
                             </page>
                         </notebook>
                     </sheet>
@@ -37,8 +37,8 @@
             <field name="arch" type="xml">
                 <search string="Product List Search">
                     <field name="name"/>
-                    <field name="product_ids"/>
-                    <field name="customer_ids"/>
+                    <field name="product_id"/>
+                    <field name="customer_id"/>
                 </search>
             </field>
         </record>
