--- a/automated-product/views/product_template_views.xml
+++ b/automated-product/views/product_template_views.xml
@@ -6,6 +6,7 @@
             <field name="code">order.reference.template.seq</field>
             <field name="active">TRUE</field>
             <field name="padding">6</field>
+            <field name="number_next">1</field>
             <field name="number_increment">1</field>
             <field name="company_id" eval="False" />
         </record>
