--- a/auto_shoes/views/product_views_inheritted.xml
+++ b/auto_shoes/views/product_views_inheritted.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record model="ir.ui.view" id="product_inherit_shoes">
+        <record model="ir.ui.view" id="product_inherit_NYPW">
             <field name="name">product.template.product.form.inherit.shoes</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
-                <!-- <field name="list_price" position="after">
-                    <field name='pair_per_case' />
-                    <field name='price_per_pair'/>
-                </field> -->
                 <xpath expr="//page[@name='general_information']" position="inside">
                     <group>
                     <field name='pair_per_case' />
