--- a/greenville_produce_unique_product_lists/views/contact_views_inherit.xml
+++ b/greenville_produce_unique_product_lists/views/contact_views_inherit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record model="ir.ui.view" id="contact_views_inherit_form">
-        <field name="name">greenville.contact.views.inherit.form</field>
+    <record id="greenville_partner_views_inherit_form" model="ir.ui.view">
+        <field name="name">greenville.partner.views.inherit.form</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
