--- a/GreenVille-Produce/views/product_list.xml
+++ b/GreenVille-Produce/views/product_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
     <record model="ir.actions.act_window" id="product_list_action">
             <field name="name">Product Lists</field>
-            <field name="res_model">greenville.product</field>
+            <field name="res_model">product.list</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html" >
                 <p class="o_view_nocontent_smiling_face">
@@ -11,9 +10,6 @@
                 </p>
             </field>
         </record>
-
-    </data>
-
     <menuitem 
         id="greenville_product_menuitem" 
         name="Product Lists"
@@ -21,7 +17,4 @@
         action="product_list_action"
         sequence="3"
     />
-
-    
-
 </odoo>
