--- a/GreenVille-Produce/views/product_list_views_form_tree.xml
+++ b/GreenVille-Produce/views/product_list_views_form_tree.xml
@@ -2,8 +2,8 @@
 <odoo>
     <data>
         <record model="ir.ui.view" id="productlist_view_form">
-            <field name="name">greenville.product.form</field>
-            <field name="model">greenville.product</field>
+            <field name="name">product.list.form</field>
+            <field name="model">product.list</field>
             <field name="arch" type="xml">
                 <form string="Course Form">
                     <sheet>
@@ -25,8 +25,8 @@
         </record>
 
         <record model="ir.ui.view" id="course_view_list">
-            <field name="name">greenville.product.list</field>
-            <field name="model">greenville.product</field>
+            <field name="name">product.list.list</field>
+            <field name="model">product.list</field>
             <field name="arch" type="xml">
                 <tree string="Course List">
                     <field name="name" />
