--- a/timesheet_access_levels/views/account_analytic_line_views.xml
+++ b/timesheet_access_levels/views/account_analytic_line_views.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-        <record model="ir.ui.view" id="product_template_only_form_view_inherit_nypw">
-            <field name="name">account.analytic.line.invalidate</field>
-            <field name="model">account.analytic.line</field>
-            <field name="inherit_id" ref="hr_timesheet.hr_timesheet_line_tree"/>
-            <field name="arch" type="xml">
-                <field name="date" position="after">
-                    <field name="current_level"></field>
-                </field>
-            </field>
-        </record>
-    </data>
+    <record id="product_lists_tree_view" model="ir.ui.view" >
+        <field name="name">product.lists.tree</field>
+        <field name="model">product.lists</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="products"/>
+            </tree>
+        </field>
+    </record>
+    
+    <record id="products_lists_menu_action" model="ir.actions.act_window" >
+        <field name="name">Product lists</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">greenvile,produce.productlist</field>
+        <field name="view_mode">tree</field>
+    </record>
+
+    <menuitem
+        id="products_lists_menu"
+        name="Product Lists"
+        parent = "sale.product_menu_catalog"
+        sequence= "2"
+        action = "products_lists_menu_action"
+    />
+
 </odoo>
