--- a/nypaw_stock_automated_product_name/views/nypaw_apn_product_template_views_inherit.xml
+++ b/nypaw_stock_automated_product_name/views/nypaw_apn_product_template_views_inherit.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="product_template_inherit_psl" model="ir.ui.view">
-            <field name="name">product.template.psl</field>
+        <record id="product_template_inherit_nypaw" model="ir.ui.view">
+            <field name="name">product.template.nypaw</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_only_form_view"></field>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='barcode']" position="after">
-                    <field name="lot_number_prefix" />
+                    <field name="gender" />
+                    <field name="upc" force_save="1" />
                 </xpath>
             </field>
         </record>
