--- a/survey-code-question/views/survey_templates.xml
+++ b/survey-code-question/views/survey_templates.xml
@@ -3,11 +3,10 @@
     <!-- This is the web template that creates the text box.-->
     <template id="question_container_inherit" inherit_id="survey.question_container" name="Question Container Inherit">
         <t t-if="question.question_type == 'matrix'" position="after">
-            <t t-if="question.question_type == 'code'"><t t-call="survey.question_text_box"/></t>
+            <t t-if="question.question_type == 'code'"><t t-call="survey-code-question.question_code_box"/></t>
         </t>
     </template>
 
-    <!-- How to call this question_code_box? instead of survey.question_text_box-->
     <template id="question_code_box" name="Question: Code text box">
         <div class="o_survey_comment_container p-0">
             <textarea class="form-control o_survey_question_text_box bg-transparent text-dark rounded-0 p-0" rows="3" t-att-name="question.id"
