--- a/filter/views/filter_views.xml
+++ b/filter/views/filter_views.xml
@@ -4,19 +4,75 @@
         <field name="name">filter.view.tree</field>
         <field name="model">parts.part</field>
         <field name="arch" type="xml">
-            <tree string="Make a Selection">
-                <field name="year" widget="selection" />
-                <field name="make" widget="selection" />
-                <field name="model" widget="selection" />
-                <field name="engine" widget="selection" />
-                <field name="details" widget="selection" />
+            <tree string="Make a Selection"
+                    decoration-success="status == 'available'"
+                    decoration-muted="status == 'unavailable'">
+                <field name="name" />
+                <field name="year_id" />
+                <field name="make_id" />
+                <field name="model_id" />
+                <field name="engine_id" />
+                <field name="details_id" />
+                <field name="status" invisible="1" />
             </tree>
         </field>
     </record>
 
+    <record id="filter_view_form" model="ir.ui.view">
+        <field name="name">filter.view.form</field>
+        <field name="model">parts.part</field>
+        <field name="arch" type="xml">
+            <form string="Create Part">
+                <sheet>
+                    <div class="oe_title">
+                        <label for="name" class="oe_edit_only" />
+                        <h1>
+                            <field name="name" />
+                        </h1>
+                    </div>
+                    <group>
+                        <group name="brand_related">
+                            <field name="year_id" />
+                            <field name="make_id" />
+                            <field name="model_id" />
+                        </group>
+                        <group name="extras">
+                            <field name="engine_id" />
+                            <field name="details_id" />
+                            <field name="status" />
+                        </group>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="filter_view_search" model="ir.ui.view">
+        <field name="name">filter.view.search</field>
+        <field name="model">parts.part</field>
+        <field name="arch" type="xml">
+            <search string="Search...">
+                <field name="name" string="Part Name" />
+                <separator />
+                <group expand="1" string="Group By">
+                    <filter name="year_id" string="Year" 
+                        context="{'group_by':'year_id'}" />
+                    <filter name="make_id" string="Make" 
+                        context="{'group_by':'make_id'}" />
+                    <filter name="model_id" string="Model" 
+                        context="{'group_by':'model_id'}" />
+                    <filter name="engine_id" string="Engine" 
+                        context="{'group_by':'engine_id'}" />
+                    <filter name="details_id" string="Details" 
+                        context="{'group_by':'details_id'}" />
+                </group>
+            </search>
+        </field>
+    </record>
+
     <record id="filter_action" model="ir.actions.act_window">
-        <field name="name">Filter Parts</field>
+        <field name="name">All Parts</field>
         <field name="res_model">parts.part</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,form</field>
     </record>
 </odoo>
