--- a/survey-code-question/views/survey_question_form_inherit.xml
+++ b/survey-code-question/views/survey_question_form_inherit.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="survey.survey_question_form"/>
         <field name="arch" type="xml">
             <div class="col-lg-6 offset-lg-3 o_preview_questions" position="inside">
-                <div attrs="{'invisible': [('question_type', '!=', 'code')]}">
+                <div attrs="{'invisible': [('question_type', '!=', 'code_box')]}">
                     <i class="fa fa-align-justify fa-4x" role="img" aria-label="Code lines" title="Code Lines"/>
                 </div>
             </div>
