--- a/survey-code-question/views/survey_user_input_line_view_form_inherit.xml
+++ b/survey-code-question/views/survey_user_input_line_view_form_inherit.xml
@@ -8,7 +8,7 @@
         <field name="inherit_id" ref="survey.survey_user_input_line_view_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='value_char_box']" position="after">
-                <field name="value_code_box" colspan='2' attrs="{'invisible': [('answer_type', '!=', 'code')]}" />
+                <field name="value_code_box" colspan='2' attrs="{'invisible': [('answer_type', '!=', 'code_box')]}" />
             </xpath>
         </field>
     </record>
