[IMP] Form view allows user to create a new mapping and select what model whose records they want to export, and some work towards fetching that model's fields when the selected model is changed (still in progress)

--- a/custom_edi/views/custom_mapping_menuitems.xml
+++ b/custom_edi/views/custom_mapping_menuitems.xml
@@ -4,7 +4,7 @@
 <odoo>
     <data>
         <record id="action_custom_mapping_views" model="ir.actions.act_window">
-            <field name="name">Custom mappings :)</field>
+            <field name="name">Custom mappings</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">edi2.custom.mapping</field>
             <field name="view_mode">tree,form</field>
