--- a/custom_edi/views/custom_mapping.xml
+++ b/custom_edi/views/custom_mapping.xml
@@ -20,9 +20,22 @@
             <field name="model">edi2.custom.mapping</field>
             <field name="arch" type="xml">
                 <form string="Custom Mappings">
-                    <field name="name"/>
-                    <field name="model"/>
-                    hi stranger :)
+                    <sheet>
+                        <h1><field name="name"/></h1>
+                        <group>
+                            <field name="model"/>
+                        </group>
+
+                        <group>
+                            <field name="fields" widget="many2many" string="Fields to Export">
+                                <tree>
+                                    <field name="field_description"/> <!-- human readable name -->
+                                    <field name="name"/> <!-- technical name -->
+                                    <field name="ttype"/> <!-- data type -->
+                                </tree>
+                            </field>
+                        </group>
+                    </sheet>
                 </form>
             </field>
         </record>
