--- a/filter/wizard/component_search_wizard_views.xml
+++ b/filter/wizard/component_search_wizard_views.xml
@@ -5,31 +5,61 @@
         <field name="model">component.search.wizard</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
-            <form string="Search Components For">
-                <group>
-                    <field name="brand_id" options="{'no_create': True}" />
-                    <field name="model_id" options="{'no_create': True}" />
-                    <field name="version_id" options="{'no_create': True}" />
-                </group>
-                <group>
-                    <field name="internal_id" options="{'no_create': True}" />
-                    <field name="external_id" options="{'no_create': True}" />
-                    <field name="is_completed" invisible="1" />
-                </group>
-                <footer>
-                    <button name="action_search_wizard" type="object"
-                        string="Search" class="oe_highlight" />
-                </footer>
-                <group>
-                    <h1>
-                        <field name="name" />
-                    </h1>
-                </group>
-                <notebook attrs="{'invisible': [('is_completed', '=', False)]}">
-                    <page string="Results Found" nolabel="1">
-                        <field name="component_ids" />
-                    </page>
-                </notebook>
+            <form name="search" string="Search Components For">
+                <div style="padding: 1em;">
+                    <div class="oe_title">
+                        <h1>
+                            Please specify your vehicle
+                        </h1>
+                    </div>
+                    <div>
+                        <span style="display: inline-block;
+                            width: 15%; text-align: center;">
+                            <h2>SHOP BY VEHICLE</h2>
+                        </span>
+                        <span style="text-align: center;">
+                            <field name="brand_id" widget="selection"
+                                placeholder="- Select Make -" required="1"
+                                style="width: 12%; margin: 1em;" />
+                            <field name="model_id" widget="selection"
+                                placeholder="- Select Model -" required="1"
+                                style="width: 12%; margin: 1em;" />
+                            <field name="version_id" widget="selection"
+                                placeholder="- Select Year -" required="1"
+                                style="width: 12%; margin: 1em;" />
+                            <field name="internal_id" widget="selection"
+                                placeholder="- Select Engine -" required="1"
+                                style="width: 12%; margin: 1em;" />
+                            <field name="external_id" widget="selection"
+                                placeholder="- Select Trim Level -" required="1"
+                                style="width: 12%; margin: 1em;" />
+                            <field name="is_completed" invisible="1" />
+                        </span>
+                        <span style="display: inline-block; width: 10%; text-align: right;">
+                            <button name="action_search_wizard" type="object"
+                                string="Search" class="oe_highlight" />
+                            &#x2063;
+                            <button name="action_reset_wizard" type="object"
+                                string="Reset" />
+                        </span>
+                    </div>
+                </div>
+                <div class="warning_text" style="padding: 1em;">
+                    <p>Once you have completely specified your vehicle, 
+                    we are able to show you only the parts that will work for you.<br />
+                    Out of stock parts are listed in grey. Please check back later
+                    for availability.</p>
+                    <p>Unfortunately, if your vehicle isn't listed,
+                    we do not have a current offering for that application.<br />
+                    Please check back later or call our customer support line
+                    for additional information and questions.</p>
+                </div>
+                <h3>
+                    Results > <field name="name" />
+                </h3>
+                <tree>
+                    <field name="component_ids" />
+                </tree>
             </form>
         </field>
     </record>
